k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
  labels:
    app.kubernetes.io/name: gateway-service
spec:
  selector:
    app.kubernetes.io/name: gateway
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200

---
# Gateway deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
  labels:
    app.kubernetes.io/name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
    spec:
      containers:
        - name: gateway
          image: piotrostr/lancr:latest
          command:
            [
              "./lancr",
              "gateway",
              "--grpc-server-addr",
              "server-service.default.svc.cluster.local:4201",
              "--auth-service-addr",
              "auth-service.default.svc.cluster.local:42069"
            ]
          ports:
            - containerPort: 4200
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "250m"
