k8s/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: default
  labels:
    app.kubernetes.io/name: hello-world-service
spec:
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80

---
# hello-world deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: default
  labels:
    app.kubernetes.io/name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
    spec:
      containers:
        - name: hello-world
          image: rancher/hello-world
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "100m"
