k8s/manifest.yaml
# Gateway service
# TODO(piotrostr):
# - think about the right spec.ingressClassName
# - add spec.tls for https
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
  labels:
    app.kubernetes.io/name: gateway-service
spec:
  selector:
    app.kubernetes.io/name: gateway
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200

---
# Gateway deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
  labels:
    app.kubernetes.io/name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
    spec:
      containers:
        - name: gateway
          image: gcr.io/asoltd-guilds/lancr:latest
          command:
            [
              "./lancr",
              "gateway",
              "--grpc-server-addr",
              "heroes-service.default.svc.cluster.local:4201",
            ]
          ports:
            - containerPort: 4200
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
# Heroes service
apiVersion: v1
kind: Service
metadata:
  name: heroes-service
  namespace: default
  labels:
    app.kubernetes.io/name: heroes-service
spec:
  selector:
    app.kubernetes.io/name: heroes
  ports:
    - protocol: TCP
      port: 4201
      targetPort: 4201

---
# Heroes deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heroes
  namespace: default
  labels:
    app.kubernetes.io/name: heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: heroes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heroes
    spec:
      serviceAccountName: heroes-sa
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: heroes
          image: gcr.io/asoltd-guilds/lancr:latest
          command: ["./lancr", "server"]
          ports:
            - containerPort: 4201
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
