k8s/server.yaml
# Server service
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
  labels:
    app.kubernetes.io/name: server-service
spec:
  selector:
    app.kubernetes.io/name: server
  ports:
    - protocol: TCP
      port: 4201
      targetPort: 4201

---
# Server deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: default
  labels:
    app.kubernetes.io/name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
    spec:
      # serviceAccountName: heroes-sa
      # nodeSelector:
      #   iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: server
          image: piotrostr/lancr:latest
          command: [
            "./lancr",
            "server",
            "--auth-service-addr",
            "auth-service.default.svc.cluster.local:42069",
          ]
          ports:
            - containerPort: 4201
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "250m"
