k8s/website.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: default
  labels:
    app.kubernetes.io/name: website-service
spec:
  selector:
    app.kubernetes.io/name: website
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: default
  labels:
    app.kubernetes.io/name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website
    spec:
      containers:
        - name: gateway
          image: piotrostr/lancr-website:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "125m"
