k8s/_gke_ingress.yaml
# Google Cloud Load Balancer ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  labels:
    app.kubernetes.io/name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # below global-static-ip-name is claimed from ./hack/claim-ip-address.sh 
    # see https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs
    kubernetes.io/ingress.global-static-ip-name: lancr-lb-ip

    # use a mangaged certificate
    networking.gke.io/managed-certificates: managed-lancr-cert

    # always redirect http to https 
    networking.gke.io/v1beta1.FrontendConfig: http-to-https
spec:
  rules:
    - host: api.lancr.co.uk
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-service
                port:
                  number: 4200

          - path: /v1/search
            pathType: Exact
            backend:
              service:
                name: typesense-service
                port:
                  number: 8108
