k8s/local_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /interface
            pathType: Exact
            backend:
              service:
                name: interface-service
                port:
                  number: 3000

          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-service
                port:
                  number: 4200

          # route any of /{collections, search} to typesense service
          # the path allows to use regex
          - path: /(collections|search)(.*)/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: typesense-service
                port:
                  number: 8108
